<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Color_negro"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ObdRead" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoVertical"
        android:src="@drawable/titulo" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="306dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.67"
        android:background="@drawable/fondo_menu"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonFuel"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#00FFFFFF"
            android:gravity="center_horizontal"
            android:onClick="lanzarModoCrucero"
            android:text="@string/Mconduccion"
            android:textColor="@color/Color_blanco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#00FFFFFF"
            android:gravity="center_horizontal"
            android:onClick="lanzarModoTutor"
            android:text="@string/Mtutor"
            android:textColor="@color/Color_blanco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#00FFFFFF"
            android:gravity="center_horizontal"
            android:onClick="lanzarMapas"
            android:text="@string/Rutas"
            android:textColor="@color/Color_blanco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#00FFFFFF"
            android:gravity="center_horizontal"
            android:onClick="lanzarGraficos"
            android:text="@string/Graficos"
            android:textColor="@color/Color_blanco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:gravity="center_horizontal"
            android:onClick="lanzarAcercaDe"
            android:text="@string/AcercaDe"
            android:textColor="@color/Color_blanco"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>